crates/idl-cpp/tests/snapshots/snapshot_codegen__snapshot_amqp_helpers_struct.snap
---
source: crates/idl-cpp/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by zerodds idl-cpp. Do not edit.
#pragma once

#include <cstdint>

#include "dds/topic/TopicTraits.hpp"
#include "dds/topic/xcdr2.hpp"
#include "dds/topic/xcdr2_md5.hpp"

class Sensor {
public:
    Sensor() = default;
    ~Sensor() = default;

private:
    int32_t id_;
    double temp_;

public:
    int32_t& id() { return id_; }
    const int32_t& id() const { return id_; }
    void id(const int32_t& value) { id_ = value; }
    double& temp() { return temp_; }
    const double& temp() const { return temp_; }
    void temp(const double& value) { temp_ = value; }
};


// DDS-PSM-Cxx topic_type_support<T> -- auto-generiert (XCDR2 Wire, XTypes 1.3 7.4).
namespace dds {
namespace topic {

template <>
struct topic_type_support<::Sensor> {
    static const char* type_name() { return "Sensor"; }
    static constexpr bool is_keyed() { return false; }
    static constexpr ::dds::topic::core::policy::DataRepresentationKind extensibility() { return ::dds::topic::core::policy::DataRepresentationKind::APPENDABLE; }
    static std::vector<uint8_t> encode(const ::Sensor& __v) {
        return encode(__v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
    static std::vector<uint8_t> encode(const ::Sensor& __v, ::dds::topic::xcdr2::XcdrVersion __repr) {
        std::vector<uint8_t> __out;
        (void)__v;
        const size_t __max_align = ::dds::topic::xcdr2::xcdr_max_align(__repr);
        (void)__max_align;
        const auto __dh = ::dds::topic::xcdr2::dheader_begin(__out);
        const size_t __origin = __out.size();
        (void)__origin;
        ::dds::topic::xcdr2::write_le_origin<int32_t>(__out, __origin, __v.id(), __max_align);
        ::dds::topic::xcdr2::write_le_origin<double>(__out, __origin, __v.temp(), __max_align);
        ::dds::topic::xcdr2::dheader_end(__out, __dh);
        return __out;
    }
    static std::vector<uint8_t> encode_be(const ::Sensor& __v) {
        std::vector<uint8_t> __out;
        (void)__v;
        const auto __dh = ::dds::topic::xcdr2::dheader_begin(__out);
        const size_t __origin = __out.size();
        (void)__origin;
        ::dds::topic::xcdr2::write_be_origin<int32_t>(__out, __origin, __v.id());
        ::dds::topic::xcdr2::write_be_origin<double>(__out, __origin, __v.temp());
        ::dds::topic::xcdr2::dheader_end(__out, __dh);
        return __out;
    }
    static ::Sensor decode(const uint8_t* __buf, size_t __len, ::dds::topic::xcdr2::XcdrVersion __repr) {
        size_t __pos = 0;
        ::Sensor __v;
        const size_t __max_align = ::dds::topic::xcdr2::xcdr_max_align(__repr);
        (void)__buf; (void)__len; (void)__pos; (void)__max_align;
        const auto __dh = ::dds::topic::xcdr2::dheader_read(__buf, __pos, __len);
        const size_t __origin = __pos;
        const size_t __end = __origin + __dh;
        (void)__end;
        __v.id(::dds::topic::xcdr2::read_le_origin<int32_t>(__buf, __pos, __len, __origin, __max_align));
        __v.temp(::dds::topic::xcdr2::read_le_origin<double>(__buf, __pos, __len, __origin, __max_align));
        if (__pos < __end) __pos = __end;
        return __v;
    }
    static std::array<uint8_t, 16> key_hash(const ::Sensor& __v) {
        (void)__v;
        return std::array<uint8_t, 16>{{0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0}};
    }
};

} // namespace topic
} // namespace dds
// Spec §7.2.3 / §8.1.2 / §8.1.3 — AMQP-Bindings.
// Runtime-Header: <zerodds/amqp/codec.hpp>
namespace zerodds_amqp_helpers {

// Sensor — Spec §8.1.3 composite + §8.1.2 JSON.
inline ::zerodds::amqp::Value to_amqp_value(const ::Sensor& v_) {
    ::zerodds::amqp::StructBuilder b_("Sensor");
    b_.field_int32("id", v_.id());
    b_.field_double("temp", v_.temp());
    return b_.build();
}

inline std::string to_json_string(const ::Sensor& v_) {
    return ::zerodds::amqp::to_json(to_amqp_value(v_));
}

} // namespace zerodds_amqp_helpers
