crates/idl-cpp/tests/snapshots/snapshot_codegen__snapshot_amqp_helpers_union.snap
---
source: crates/idl-cpp/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by zerodds idl-cpp. Do not edit.
#pragma once

#include <cstdint>
#include <variant>

#include "dds/topic/TopicTraits.hpp"
#include "dds/topic/xcdr2.hpp"
#include "dds/topic/xcdr2_md5.hpp"
#include "dds/core/Fixed.hpp"

class U {
public:
    using value_type = std::variant<int32_t, double>;
    U() = default;
    ~U() = default;

    int32_t _d() const { return discriminator_; }
    void _d(int32_t d) { discriminator_ = d; }
    value_type& value() { return value_; }
    const value_type& value() const { return value_; }

    // case 1 -> a
    // case 2 -> b
    // no explicit 'default:' branch

private:
    int32_t discriminator_{};
    value_type value_{};
};


// DDS-PSM-Cxx topic_type_support<T> -- auto-generiert (XCDR2 Wire, XTypes 1.3 7.4).
namespace dds {
namespace topic {

template <>
struct topic_type_support<::U> {
    static const char* type_name() { return "U"; }
    static constexpr bool is_keyed() { return false; }
    static constexpr ::dds::topic::core::policy::DataRepresentationKind extensibility() { return ::dds::topic::core::policy::DataRepresentationKind::APPENDABLE; }
    static std::vector<uint8_t> encode(const ::U& zd_v);
    static std::vector<uint8_t> encode(const ::U& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr);
    static std::vector<uint8_t> encode_be(const ::U& zd_v);
    static std::vector<uint8_t> encode_be(const ::U& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr);
    static ::U decode(const uint8_t* zd_buf, size_t zd_len, ::dds::topic::xcdr2::XcdrVersion zd_repr, bool zd_be = false);
    static std::array<uint8_t, 16> key_hash(const ::U& zd_v);
    static const uint8_t* type_object() { return nullptr; }
    static uintptr_t type_object_len() { return 0; }
};

inline std::vector<uint8_t> topic_type_support<::U>::encode(const ::U& zd_v) {
        return encode(zd_v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
inline std::vector<uint8_t> topic_type_support<::U>::encode(const ::U& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr) {
        std::vector<uint8_t> zd_out;
        (void)zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_max_align;
        size_t zd_dh = ::dds::topic::xcdr2::DHEADER_NONE; (void)zd_dh;
        if (zd_repr != ::dds::topic::xcdr2::XcdrVersion::Xcdr1) { zd_dh = ::dds::topic::xcdr2::dheader_begin(zd_out); }
        const size_t zd_origin = zd_out.size();
        (void)zd_origin;
            ::dds::topic::xcdr2::write_le_origin<int32_t>(zd_out, zd_origin, zd_v._d(), zd_max_align);
        switch (static_cast<int32_t>(zd_v._d())) {
        case static_cast<int32_t>(1):
        {
            const int32_t& zd_bv = std::get<int32_t>(zd_v.value());
                ::dds::topic::xcdr2::write_le_origin<int32_t>(zd_out, zd_origin, zd_bv, zd_max_align);
            break;
        }
        case static_cast<int32_t>(2):
        {
            const double& zd_bv = std::get<double>(zd_v.value());
                ::dds::topic::xcdr2::write_le_origin<double>(zd_out, zd_origin, zd_bv, zd_max_align);
            break;
        }
        default: break;
        }
        ::dds::topic::xcdr2::dheader_end_r(zd_out, zd_dh, false, zd_repr);
        return zd_out;
    }
inline std::vector<uint8_t> topic_type_support<::U>::encode_be(const ::U& zd_v) {
        return encode_be(zd_v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
inline std::vector<uint8_t> topic_type_support<::U>::encode_be(const ::U& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr) {
        std::vector<uint8_t> zd_out;
        (void)zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_max_align;
        size_t zd_dh = ::dds::topic::xcdr2::DHEADER_NONE; (void)zd_dh;
        if (zd_repr != ::dds::topic::xcdr2::XcdrVersion::Xcdr1) { zd_dh = ::dds::topic::xcdr2::dheader_begin(zd_out); }
        const size_t zd_origin = zd_out.size();
        (void)zd_origin;
            ::dds::topic::xcdr2::write_be_origin<int32_t>(zd_out, zd_origin, zd_v._d(), zd_max_align);
        switch (static_cast<int32_t>(zd_v._d())) {
        case static_cast<int32_t>(1):
        {
            const int32_t& zd_bv = std::get<int32_t>(zd_v.value());
                ::dds::topic::xcdr2::write_be_origin<int32_t>(zd_out, zd_origin, zd_bv, zd_max_align);
            break;
        }
        case static_cast<int32_t>(2):
        {
            const double& zd_bv = std::get<double>(zd_v.value());
                ::dds::topic::xcdr2::write_be_origin<double>(zd_out, zd_origin, zd_bv, zd_max_align);
            break;
        }
        default: break;
        }
        ::dds::topic::xcdr2::dheader_end_r(zd_out, zd_dh, true, zd_repr);
        return zd_out;
    }
inline ::U topic_type_support<::U>::decode(const uint8_t* zd_buf, size_t zd_len, ::dds::topic::xcdr2::XcdrVersion zd_repr, bool zd_be) {
        size_t zd_pos = 0;
        ::U zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_buf; (void)zd_len; (void)zd_pos; (void)zd_max_align; (void)zd_be;
        size_t zd_end = zd_len; (void)zd_end;
        if (zd_repr != ::dds::topic::xcdr2::XcdrVersion::Xcdr1) { const auto zd_dh = ::dds::topic::xcdr2::dheader_read(zd_buf, zd_pos, zd_len, zd_be); zd_end = zd_pos + zd_dh; }
        const size_t zd_origin = zd_pos;
        int32_t zd_disc{};
        zd_disc =(::dds::topic::xcdr2::read_le_origin<int32_t>(zd_buf, zd_pos, zd_len, zd_origin, zd_max_align, zd_be));
        zd_v._d(zd_disc);
        switch (static_cast<int32_t>(zd_v._d())) {
        case static_cast<int32_t>(1):
        {
            int32_t zd_bv{};
            zd_bv =(::dds::topic::xcdr2::read_le_origin<int32_t>(zd_buf, zd_pos, zd_len, zd_origin, zd_max_align, zd_be));
            zd_v.value() = zd_bv;
            break;
        }
        case static_cast<int32_t>(2):
        {
            double zd_bv{};
            zd_bv =(::dds::topic::xcdr2::read_le_origin<double>(zd_buf, zd_pos, zd_len, zd_origin, zd_max_align, zd_be));
            zd_v.value() = zd_bv;
            break;
        }
        default: break;
        }
        if (zd_repr != ::dds::topic::xcdr2::XcdrVersion::Xcdr1 && zd_pos < zd_end) zd_pos = zd_end;
        return zd_v;
    }
inline std::array<uint8_t, 16> topic_type_support<::U>::key_hash(const ::U& zd_v) {
        (void)zd_v;
        return std::array<uint8_t, 16>{{0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0}};
    }

} // namespace topic
} // namespace dds
// Spec §7.2.3 / §8.1.2 / §8.1.3 — AMQP-Bindings.
// Runtime-Header: <zerodds/amqp/codec.hpp>
namespace zerodds_amqp_helpers {

// U — Spec §7.2.3 union (list of [disc, branch?]).
inline ::zerodds::amqp::Value to_amqp_value(const ::U& u_) {
    int32_t d_ = u_._d();
    ::zerodds::amqp::Value disc_ = ::zerodds::amqp::int32_value(d_);
    switch (d_) {
        case 1:
            return ::zerodds::amqp::make_union_body(disc_, ::zerodds::amqp::int32_value(std::get<int32_t>(u_.value())));
        case 2:
            return ::zerodds::amqp::make_union_body(disc_, ::zerodds::amqp::double_value(std::get<double>(u_.value())));
        default:
            return ::zerodds::amqp::make_union_body(disc_);
    }
}

inline std::string to_json_string(const ::U& u_) {
    return ::zerodds::amqp::to_json(to_amqp_value(u_));
}

} // namespace zerodds_amqp_helpers
