crates/idl-cpp/tests/snapshots/snapshot_codegen__snapshot_enum_and_typedef.snap
---
source: crates/idl-cpp/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by zerodds idl-cpp. Do not edit.
#pragma once

#include <cstdint>

enum class Color : int32_t {
    RED = 0,
    GREEN = 1,
    BLUE = 2,
};

using Hue = ::Color;
