crates/idl-cpp/tests/snapshots/snapshot_codegen__snapshot_inheritance.snap
---
source: crates/idl-cpp/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by zerodds idl-cpp. Do not edit.
#pragma once

#include <cstdint>
#include <utility>

#include "dds/topic/TopicTraits.hpp"
#include "dds/topic/xcdr2.hpp"
#include "dds/topic/xcdr2_md5.hpp"
#include "dds/core/Fixed.hpp"

class Base {
public:
    Base() = default;
    ~Base() = default;
    Base(int32_t base_field)
        : base_field_(std::move(base_field)) {}

private:
    int32_t base_field_;

public:
    int32_t& base_field() { return base_field_; }
    const int32_t& base_field() const { return base_field_; }
    void base_field(const int32_t& value) { base_field_ = value; }
};

class Child : public ::Base {
public:
    Child() = default;
    ~Child() = default;
    Child(int32_t child_field)
        : child_field_(std::move(child_field)) {}

private:
    int32_t child_field_;

public:
    int32_t& child_field() { return child_field_; }
    const int32_t& child_field() const { return child_field_; }
    void child_field(const int32_t& value) { child_field_ = value; }
};


// DDS-PSM-Cxx topic_type_support<T> -- auto-generiert (XCDR2 Wire, XTypes 1.3 7.4).
namespace dds {
namespace topic {

template <>
struct topic_type_support<::Base> {
    static const char* type_name() { return "Base"; }
    static constexpr bool is_keyed() { return false; }
    static constexpr ::dds::topic::core::policy::DataRepresentationKind extensibility() { return ::dds::topic::core::policy::DataRepresentationKind::APPENDABLE; }
    static std::vector<uint8_t> encode(const ::Base& zd_v);
    static std::vector<uint8_t> encode(const ::Base& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr);
    static std::vector<uint8_t> encode_be(const ::Base& zd_v);
    static std::vector<uint8_t> encode_be(const ::Base& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr);
    static ::Base decode(const uint8_t* zd_buf, size_t zd_len, ::dds::topic::xcdr2::XcdrVersion zd_repr, bool zd_be = false);
    static std::array<uint8_t, 16> key_hash(const ::Base& zd_v);
};

template <>
struct topic_type_support<::Child> {
    static const char* type_name() { return "Child"; }
    static constexpr bool is_keyed() { return false; }
    static constexpr ::dds::topic::core::policy::DataRepresentationKind extensibility() { return ::dds::topic::core::policy::DataRepresentationKind::APPENDABLE; }
    static std::vector<uint8_t> encode(const ::Child& zd_v);
    static std::vector<uint8_t> encode(const ::Child& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr);
    static std::vector<uint8_t> encode_be(const ::Child& zd_v);
    static std::vector<uint8_t> encode_be(const ::Child& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr);
    static ::Child decode(const uint8_t* zd_buf, size_t zd_len, ::dds::topic::xcdr2::XcdrVersion zd_repr, bool zd_be = false);
    static std::array<uint8_t, 16> key_hash(const ::Child& zd_v);
};

inline std::vector<uint8_t> topic_type_support<::Base>::encode(const ::Base& zd_v) {
        return encode(zd_v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
inline std::vector<uint8_t> topic_type_support<::Base>::encode(const ::Base& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr) {
        std::vector<uint8_t> zd_out;
        (void)zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_max_align;
        const bool zd_x1 = (zd_repr == ::dds::topic::xcdr2::XcdrVersion::Xcdr1);
        size_t zd_dh = 0; (void)zd_dh;
        if (!zd_x1) { zd_dh = ::dds::topic::xcdr2::dheader_begin(zd_out); }
        const size_t zd_origin = zd_out.size();
        (void)zd_origin;
        ::dds::topic::xcdr2::write_le_origin<int32_t>(zd_out, zd_origin, zd_v.base_field(), zd_max_align);
        if (!zd_x1) { ::dds::topic::xcdr2::dheader_end(zd_out, zd_dh, false); }
        return zd_out;
    }
inline std::vector<uint8_t> topic_type_support<::Base>::encode_be(const ::Base& zd_v) {
        return encode_be(zd_v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
inline std::vector<uint8_t> topic_type_support<::Base>::encode_be(const ::Base& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr) {
        std::vector<uint8_t> zd_out;
        (void)zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_max_align;
        const bool zd_x1 = (zd_repr == ::dds::topic::xcdr2::XcdrVersion::Xcdr1);
        size_t zd_dh = 0; (void)zd_dh;
        if (!zd_x1) { zd_dh = ::dds::topic::xcdr2::dheader_begin(zd_out); }
        const size_t zd_origin = zd_out.size();
        (void)zd_origin;
        ::dds::topic::xcdr2::write_be_origin<int32_t>(zd_out, zd_origin, zd_v.base_field(), zd_max_align);
        if (!zd_x1) { ::dds::topic::xcdr2::dheader_end(zd_out, zd_dh, true); }
        return zd_out;
    }
inline ::Base topic_type_support<::Base>::decode(const uint8_t* zd_buf, size_t zd_len, ::dds::topic::xcdr2::XcdrVersion zd_repr, bool zd_be) {
        size_t zd_pos = 0;
        ::Base zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_buf; (void)zd_len; (void)zd_pos; (void)zd_max_align; (void)zd_be;
        const bool zd_x1 = (zd_repr == ::dds::topic::xcdr2::XcdrVersion::Xcdr1);
        size_t zd_end = zd_len;
        if (!zd_x1) {
            const auto zd_dh = ::dds::topic::xcdr2::dheader_read(zd_buf, zd_pos, zd_len, zd_be);
            zd_end = zd_pos + zd_dh;
        }
        const size_t zd_origin = zd_pos;
        (void)zd_end;
        zd_v.base_field(::dds::topic::xcdr2::read_le_origin<int32_t>(zd_buf, zd_pos, zd_len, zd_origin, zd_max_align, zd_be));
        if (!zd_x1 && zd_pos < zd_end) zd_pos = zd_end;
        return zd_v;
    }
inline std::array<uint8_t, 16> topic_type_support<::Base>::key_hash(const ::Base& zd_v) {
        (void)zd_v;
        return std::array<uint8_t, 16>{{0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0}};
    }

inline std::vector<uint8_t> topic_type_support<::Child>::encode(const ::Child& zd_v) {
        return encode(zd_v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
inline std::vector<uint8_t> topic_type_support<::Child>::encode(const ::Child& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr) {
        std::vector<uint8_t> zd_out;
        (void)zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_max_align;
        const bool zd_x1 = (zd_repr == ::dds::topic::xcdr2::XcdrVersion::Xcdr1);
        size_t zd_dh = 0; (void)zd_dh;
        if (!zd_x1) { zd_dh = ::dds::topic::xcdr2::dheader_begin(zd_out); }
        const size_t zd_origin = zd_out.size();
        (void)zd_origin;
        ::dds::topic::xcdr2::write_le_origin<int32_t>(zd_out, zd_origin, zd_v.child_field(), zd_max_align);
        if (!zd_x1) { ::dds::topic::xcdr2::dheader_end(zd_out, zd_dh, false); }
        return zd_out;
    }
inline std::vector<uint8_t> topic_type_support<::Child>::encode_be(const ::Child& zd_v) {
        return encode_be(zd_v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
inline std::vector<uint8_t> topic_type_support<::Child>::encode_be(const ::Child& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr) {
        std::vector<uint8_t> zd_out;
        (void)zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_max_align;
        const bool zd_x1 = (zd_repr == ::dds::topic::xcdr2::XcdrVersion::Xcdr1);
        size_t zd_dh = 0; (void)zd_dh;
        if (!zd_x1) { zd_dh = ::dds::topic::xcdr2::dheader_begin(zd_out); }
        const size_t zd_origin = zd_out.size();
        (void)zd_origin;
        ::dds::topic::xcdr2::write_be_origin<int32_t>(zd_out, zd_origin, zd_v.child_field(), zd_max_align);
        if (!zd_x1) { ::dds::topic::xcdr2::dheader_end(zd_out, zd_dh, true); }
        return zd_out;
    }
inline ::Child topic_type_support<::Child>::decode(const uint8_t* zd_buf, size_t zd_len, ::dds::topic::xcdr2::XcdrVersion zd_repr, bool zd_be) {
        size_t zd_pos = 0;
        ::Child zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_buf; (void)zd_len; (void)zd_pos; (void)zd_max_align; (void)zd_be;
        const bool zd_x1 = (zd_repr == ::dds::topic::xcdr2::XcdrVersion::Xcdr1);
        size_t zd_end = zd_len;
        if (!zd_x1) {
            const auto zd_dh = ::dds::topic::xcdr2::dheader_read(zd_buf, zd_pos, zd_len, zd_be);
            zd_end = zd_pos + zd_dh;
        }
        const size_t zd_origin = zd_pos;
        (void)zd_end;
        zd_v.child_field(::dds::topic::xcdr2::read_le_origin<int32_t>(zd_buf, zd_pos, zd_len, zd_origin, zd_max_align, zd_be));
        if (!zd_x1 && zd_pos < zd_end) zd_pos = zd_end;
        return zd_v;
    }
inline std::array<uint8_t, 16> topic_type_support<::Child>::key_hash(const ::Child& zd_v) {
        (void)zd_v;
        return std::array<uint8_t, 16>{{0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0}};
    }

} // namespace topic
} // namespace dds
