crates/idl-cpp/tests/snapshots/snapshot_codegen__snapshot_keyed_struct.snap
---
source: crates/idl-cpp/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by zerodds idl-cpp. Do not edit.
#pragma once

#include <cstdint>
#include <utility>

#include "dds/topic/TopicTraits.hpp"
#include "dds/topic/xcdr2.hpp"
#include "dds/topic/xcdr2_md5.hpp"

class Sensor {
public:
    Sensor() = default;
    ~Sensor() = default;
    Sensor(int32_t id, double value)
        : id_(std::move(id)), value_(std::move(value)) {}

private:
    int32_t id_; // @key
    double value_;

public:
    int32_t& id() { return id_; }
    const int32_t& id() const { return id_; }
    void id(const int32_t& value) { id_ = value; }
    double& value() { return value_; }
    const double& value() const { return value_; }
    void value(const double& value) { value_ = value; }
};


// DDS-PSM-Cxx topic_type_support<T> -- auto-generiert (XCDR2 Wire, XTypes 1.3 7.4).
namespace dds {
namespace topic {

template <>
struct topic_type_support<::Sensor> {
    static const char* type_name() { return "Sensor"; }
    static constexpr bool is_keyed() { return true; }
    static constexpr ::dds::topic::core::policy::DataRepresentationKind extensibility() { return ::dds::topic::core::policy::DataRepresentationKind::APPENDABLE; }
    static std::vector<uint8_t> encode(const ::Sensor& __v) {
        return encode(__v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
    static std::vector<uint8_t> encode(const ::Sensor& __v, ::dds::topic::xcdr2::XcdrVersion __repr) {
        std::vector<uint8_t> __out;
        (void)__v;
        const size_t __max_align = ::dds::topic::xcdr2::xcdr_max_align(__repr);
        (void)__max_align;
        const auto __dh = ::dds::topic::xcdr2::dheader_begin(__out);
        const size_t __origin = __out.size();
        (void)__origin;
        ::dds::topic::xcdr2::write_le_origin<int32_t>(__out, __origin, __v.id(), __max_align);
        ::dds::topic::xcdr2::write_le_origin<double>(__out, __origin, __v.value(), __max_align);
        ::dds::topic::xcdr2::dheader_end(__out, __dh);
        return __out;
    }
    static std::vector<uint8_t> encode_be(const ::Sensor& __v) {
        std::vector<uint8_t> __out;
        (void)__v;
        const auto __dh = ::dds::topic::xcdr2::dheader_begin(__out);
        const size_t __origin = __out.size();
        (void)__origin;
        ::dds::topic::xcdr2::write_be_origin<int32_t>(__out, __origin, __v.id());
        ::dds::topic::xcdr2::write_be_origin<double>(__out, __origin, __v.value());
        ::dds::topic::xcdr2::dheader_end(__out, __dh);
        return __out;
    }
    static ::Sensor decode(const uint8_t* __buf, size_t __len, ::dds::topic::xcdr2::XcdrVersion __repr) {
        size_t __pos = 0;
        ::Sensor __v;
        const size_t __max_align = ::dds::topic::xcdr2::xcdr_max_align(__repr);
        (void)__buf; (void)__len; (void)__pos; (void)__max_align;
        const auto __dh = ::dds::topic::xcdr2::dheader_read(__buf, __pos, __len);
        const size_t __origin = __pos;
        const size_t __end = __origin + __dh;
        (void)__end;
        __v.id(::dds::topic::xcdr2::read_le_origin<int32_t>(__buf, __pos, __len, __origin, __max_align));
        __v.value(::dds::topic::xcdr2::read_le_origin<double>(__buf, __pos, __len, __origin, __max_align));
        if (__pos < __end) __pos = __end;
        return __v;
    }
    static std::array<uint8_t, 16> key_hash(const ::Sensor& __v) {
        (void)__v;
        std::vector<uint8_t> __out;
        const size_t __origin = 0;
        (void)__origin;
        ::dds::topic::xcdr2::write_be_origin<int32_t>(__out, __origin, __v.id());
        std::array<uint8_t, 16> __h{};
        if (__out.size() <= 16) {
            std::memcpy(__h.data(), __out.data(), __out.size());
            return __h;
        }
        return ::dds::topic::xcdr2_md5::md5(__out);
    }
};

} // namespace topic
} // namespace dds
