crates/idl-cpp/tests/snapshots/snapshot_codegen__snapshot_optional_member.snap
---
source: crates/idl-cpp/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by zerodds idl-cpp. Do not edit.
#pragma once

#include <cstdint>
#include <optional>
#include <utility>

#include "dds/topic/TopicTraits.hpp"
#include "dds/topic/xcdr2.hpp"
#include "dds/topic/xcdr2_md5.hpp"
#include "dds/core/Fixed.hpp"

class S {
public:
    S() = default;
    ~S() = default;
    S(std::optional<int32_t> maybe)
        : maybe_(std::move(maybe)) {}

private:
    std::optional<int32_t> maybe_;

public:
    std::optional<int32_t>& maybe() { return maybe_; }
    const std::optional<int32_t>& maybe() const { return maybe_; }
    void maybe(const std::optional<int32_t>& value) { maybe_ = value; }
};


// DDS-PSM-Cxx topic_type_support<T> -- auto-generiert (XCDR2 Wire, XTypes 1.3 7.4).
namespace dds {
namespace topic {

template <>
struct topic_type_support<::S> {
    static const char* type_name() { return "S"; }
    static constexpr bool is_keyed() { return false; }
    static constexpr ::dds::topic::core::policy::DataRepresentationKind extensibility() { return ::dds::topic::core::policy::DataRepresentationKind::APPENDABLE; }
    static const uint8_t* type_object();
    static uintptr_t type_object_len();
    static std::vector<uint8_t> encode(const ::S& zd_v);
    static std::vector<uint8_t> encode(const ::S& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr);
    static std::vector<uint8_t> encode_be(const ::S& zd_v);
    static std::vector<uint8_t> encode_be(const ::S& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr);
    static ::S decode(const uint8_t* zd_buf, size_t zd_len, ::dds::topic::xcdr2::XcdrVersion zd_repr, bool zd_be = false);
    static std::array<uint8_t, 16> key_hash(const ::S& zd_v);
};

inline const uint8_t* topic_type_support<::S>::type_object() {
    static const uint8_t ZD_TYPE_OBJECT[] = {
        0xf2, 0x51, 0x02, 0x00, 0x0a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x02, 0x00, 0x00, 0x00, 0x53, 0x00, 0x00, 0x00, 0x1c, 0x00, 0x00, 0x00, 
        0x01, 0x00, 0x00, 0x00, 0x14, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x09, 0x00, 0x04, 0x00, 0x06, 0x00, 0x00, 0x00, 0x6d, 0x61, 0x79, 0x62, 
        0x65, 0x00, 0x00, 0x00, 
    };
    return ZD_TYPE_OBJECT;
}
inline uintptr_t topic_type_support<::S>::type_object_len() { return 52; }
inline std::vector<uint8_t> topic_type_support<::S>::encode(const ::S& zd_v) {
        return encode(zd_v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
inline std::vector<uint8_t> topic_type_support<::S>::encode(const ::S& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr) {
        std::vector<uint8_t> zd_out;
        (void)zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_max_align;
        const bool zd_x1 = (zd_repr == ::dds::topic::xcdr2::XcdrVersion::Xcdr1);
        size_t zd_dh = 0; (void)zd_dh;
        if (!zd_x1) { zd_dh = ::dds::topic::xcdr2::dheader_begin(zd_out); }
        const size_t zd_origin = zd_out.size();
        (void)zd_origin;
        if (zd_v.maybe().has_value()) {
            zd_out.push_back(uint8_t{1});
            ::dds::topic::xcdr2::write_le_origin<int32_t>(zd_out, zd_origin, (*zd_v.maybe()), zd_max_align);
        } else {
            zd_out.push_back(uint8_t{0});
        }
        if (!zd_x1) { ::dds::topic::xcdr2::dheader_end(zd_out, zd_dh, false); }
        return zd_out;
    }
inline std::vector<uint8_t> topic_type_support<::S>::encode_be(const ::S& zd_v) {
        return encode_be(zd_v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
inline std::vector<uint8_t> topic_type_support<::S>::encode_be(const ::S& zd_v, ::dds::topic::xcdr2::XcdrVersion zd_repr) {
        std::vector<uint8_t> zd_out;
        (void)zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_max_align;
        const bool zd_x1 = (zd_repr == ::dds::topic::xcdr2::XcdrVersion::Xcdr1);
        size_t zd_dh = 0; (void)zd_dh;
        if (!zd_x1) { zd_dh = ::dds::topic::xcdr2::dheader_begin(zd_out); }
        const size_t zd_origin = zd_out.size();
        (void)zd_origin;
        if (zd_v.maybe().has_value()) {
            zd_out.push_back(uint8_t{1});
            ::dds::topic::xcdr2::write_be_origin<int32_t>(zd_out, zd_origin, (*zd_v.maybe()), zd_max_align);
        } else {
            zd_out.push_back(uint8_t{0});
        }
        if (!zd_x1) { ::dds::topic::xcdr2::dheader_end(zd_out, zd_dh, true); }
        return zd_out;
    }
inline ::S topic_type_support<::S>::decode(const uint8_t* zd_buf, size_t zd_len, ::dds::topic::xcdr2::XcdrVersion zd_repr, bool zd_be) {
        size_t zd_pos = 0;
        ::S zd_v;
        const size_t zd_max_align = ::dds::topic::xcdr2::xcdr_max_align(zd_repr);
        (void)zd_buf; (void)zd_len; (void)zd_pos; (void)zd_max_align; (void)zd_be;
        const bool zd_x1 = (zd_repr == ::dds::topic::xcdr2::XcdrVersion::Xcdr1);
        size_t zd_end = zd_len;
        if (!zd_x1) {
            const auto zd_dh = ::dds::topic::xcdr2::dheader_read(zd_buf, zd_pos, zd_len, zd_be);
            zd_end = zd_pos + zd_dh;
        }
        const size_t zd_origin = zd_pos;
        (void)zd_end;
        {
            uint8_t zd_present = ::dds::topic::xcdr2::read_u8(zd_buf, zd_pos, zd_len);
            if (zd_present) {
                zd_v.maybe(::dds::topic::xcdr2::read_le_origin<int32_t>(zd_buf, zd_pos, zd_len, zd_origin, zd_max_align, zd_be));
            } else {
                zd_v.maybe(std::nullopt);
            }
        }
        if (!zd_x1 && zd_pos < zd_end) zd_pos = zd_end;
        return zd_v;
    }
inline std::array<uint8_t, 16> topic_type_support<::S>::key_hash(const ::S& zd_v) {
        (void)zd_v;
        return std::array<uint8_t, 16>{{0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0}};
    }

} // namespace topic
} // namespace dds
