crates/idl-cpp/tests/snapshots/snapshot_codegen__snapshot_simple_struct.snap
---
source: crates/idl-cpp/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by zerodds idl-cpp. Do not edit.
#pragma once

#include <cstdint>
#include <utility>

#include "dds/topic/TopicTraits.hpp"
#include "dds/topic/xcdr2.hpp"
#include "dds/topic/xcdr2_md5.hpp"

class Point {
public:
    Point() = default;
    ~Point() = default;
    Point(int32_t x, int32_t y)
        : x_(std::move(x)), y_(std::move(y)) {}

private:
    int32_t x_;
    int32_t y_;

public:
    int32_t& x() { return x_; }
    const int32_t& x() const { return x_; }
    void x(const int32_t& value) { x_ = value; }
    int32_t& y() { return y_; }
    const int32_t& y() const { return y_; }
    void y(const int32_t& value) { y_ = value; }
};


// DDS-PSM-Cxx topic_type_support<T> -- auto-generiert (XCDR2 Wire, XTypes 1.3 7.4).
namespace dds {
namespace topic {

template <>
struct topic_type_support<::Point> {
    static const char* type_name() { return "Point"; }
    static constexpr bool is_keyed() { return false; }
    static constexpr ::dds::topic::core::policy::DataRepresentationKind extensibility() { return ::dds::topic::core::policy::DataRepresentationKind::APPENDABLE; }
    static std::vector<uint8_t> encode(const ::Point& __v) {
        return encode(__v, ::dds::topic::xcdr2::XcdrVersion::Xcdr2);
    }
    static std::vector<uint8_t> encode(const ::Point& __v, ::dds::topic::xcdr2::XcdrVersion __repr) {
        std::vector<uint8_t> __out;
        (void)__v;
        const size_t __max_align = ::dds::topic::xcdr2::xcdr_max_align(__repr);
        (void)__max_align;
        const auto __dh = ::dds::topic::xcdr2::dheader_begin(__out);
        const size_t __origin = __out.size();
        (void)__origin;
        ::dds::topic::xcdr2::write_le_origin<int32_t>(__out, __origin, __v.x(), __max_align);
        ::dds::topic::xcdr2::write_le_origin<int32_t>(__out, __origin, __v.y(), __max_align);
        ::dds::topic::xcdr2::dheader_end(__out, __dh);
        return __out;
    }
    static std::vector<uint8_t> encode_be(const ::Point& __v) {
        std::vector<uint8_t> __out;
        (void)__v;
        const auto __dh = ::dds::topic::xcdr2::dheader_begin(__out);
        const size_t __origin = __out.size();
        (void)__origin;
        ::dds::topic::xcdr2::write_be_origin<int32_t>(__out, __origin, __v.x());
        ::dds::topic::xcdr2::write_be_origin<int32_t>(__out, __origin, __v.y());
        ::dds::topic::xcdr2::dheader_end(__out, __dh);
        return __out;
    }
    static ::Point decode(const uint8_t* __buf, size_t __len, ::dds::topic::xcdr2::XcdrVersion __repr) {
        size_t __pos = 0;
        ::Point __v;
        const size_t __max_align = ::dds::topic::xcdr2::xcdr_max_align(__repr);
        (void)__buf; (void)__len; (void)__pos; (void)__max_align;
        const auto __dh = ::dds::topic::xcdr2::dheader_read(__buf, __pos, __len);
        const size_t __origin = __pos;
        const size_t __end = __origin + __dh;
        (void)__end;
        __v.x(::dds::topic::xcdr2::read_le_origin<int32_t>(__buf, __pos, __len, __origin, __max_align));
        __v.y(::dds::topic::xcdr2::read_le_origin<int32_t>(__buf, __pos, __len, __origin, __max_align));
        if (__pos < __end) __pos = __end;
        return __v;
    }
    static std::array<uint8_t, 16> key_hash(const ::Point& __v) {
        (void)__v;
        return std::array<uint8_t, 16>{{0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0}};
    }
};

} // namespace topic
} // namespace dds
